overflow fix

--- a/app/style.css
+++ b/app/style.css
@@ -16,6 +16,7 @@ body {
   /* gap: 2rem; */
   margin: 0;
   background: #FFFFFF;
+  overflow: hidden;
 }
 
 input[type=file] {
